--- a/abbr.css
+++ b/abbr.css
@@ -3,7 +3,7 @@
 abbr {
 	display: flex;
 	color: black;
-	font-size: 2em;
+	font-size: 2rem;
 	/* font-weight: bold; */
 	/* font-family: Lato, sans-serif; */
 	text-decoration: none;
