--- a/index.css
+++ b/index.css
@@ -104,6 +104,7 @@ p {
 .company {
 	display: flex;
 	align-items: center;
+	margin-left: 12px;
 }
 
 .sy-logo {
@@ -112,19 +113,18 @@ p {
 	display: block;
 	height: auto;
 	filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.9));
+	display: none;
 }
 
 .logo-box {
 	border: 1px solid rgba(0, 0, 0, 0.5);
-	padding: 5px;
+	padding: 0 5px;
 	border-radius: 100%;
 	cursor: pointer;
 
 	&:hover {
 		border: none;
 	}
-
-	display: none;
 }
 
 /* // <uniquifier>: Use a unique and descriptive class name */
@@ -133,7 +133,7 @@ p {
 	font-style: normal;
 	font-size: 2rem;
 	color: black;
-	display: inline-block;
+	display: none;
 	vertical-align: top;
 
 	text-shadow: 0 0 5px rgba(255, 255, 255, 0.8),
@@ -631,8 +631,6 @@ a.company-title:hover {
 	height: auto;
 	background-color: #fff4f0;
 	color: #2e2e2e;
-	/* width: 80vw;
-	min-width: 768px; */
 	margin: 0 auto;
 }
 
@@ -682,7 +680,6 @@ a.company-title:hover {
 .timeline > li .timeline-panel {
 	position: relative;
 	float: right;
-	/* width: 100%; */
 	padding: 0 20px 0 100px;
 	text-align: left;
 }
@@ -883,7 +880,46 @@ a.company-title:hover {
 	color: #b0b0b0;
 }
 
+.project-name {
+	text-align: center;
+	padding-top: 4rem;
+	font-size: 2rem;
+	color: #0070d8;
+	margin: 0;
+}
+
+.project-type {
+	text-align: center;
+	font-size: 1.4rem;
+	font-weight: 400;
+	color: #8e8e8e;
+	margin: 0;
+}
+
+.image-container {
+	width: 60vw;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #fff4f0;
+	margin: 3rem auto;
+	min-width: 960px;
+}
+
 @media screen and (max-width: 1199px) {
+	.company {
+		margin-left: 0;
+	}
+
+	.sy-logo,
+	.company-title {
+		display: block;
+	}
+
+	.logo-box {
+		display: none;
+		cursor: pointer;
+	}
 	.about-sy {
 		width: 100%;
 		font-size: 1.8rem;
@@ -921,22 +957,13 @@ a.company-title:hover {
 	.about-content {
 		width: 50vw;
 	}
+	.image-container {
+		width: 90vw;
+		min-width: 370px;
+	}
 }
 
 @media screen and (max-width: 767px) {
-	.company {
-		margin-left: 12px;
-	}
-	.sy-logo,
-	.company-title {
-		display: none;
-	}
-
-	.logo-box {
-		display: block;
-		cursor: pointer;
-	}
-
 	.about-sy {
 		font-size: 1.6rem;
 	}
@@ -977,13 +1004,6 @@ a.company-title:hover {
 }
 
 @media screen and (max-width: 479px) {
-	/* .about-content {
-		width: 80vw;
-		padding: 1.5rem 0;
-		text-align: center;
-		margin: 0 auto;
-	} */
-
 	.about-content p {
 		margin: 8px;
 	}
