--- a/index.css
+++ b/index.css
@@ -42,7 +42,7 @@ header.invisible {
 	border: none;
 	cursor: pointer;
 	z-index: 110;
-	margin-left: auto;
+	/* margin-left: auto; */
 	align-items: center;
 	padding: 0;
 }
