--- a/index.css
+++ b/index.css
@@ -36,15 +36,15 @@ header.invisible {
 	display: none;
 	flex-direction: column;
 	justify-content: space-between;
-	width: 24px;
+	width: 30px;
 	height: 24px;
 	background: transparent;
 	border: none;
 	cursor: pointer;
 	z-index: 110;
-	/* margin-left: auto; */
+	margin-left: auto;
 	align-items: center;
-	padding: 0;
+	padding: 1px 6px;
 }
 
 .hamburger-menu span {
