--- a/index.css
+++ b/index.css
@@ -8,6 +8,11 @@ body {
 	font-size: 1rem;
 }
 
+main {
+	max-width: 1920px;
+	margin: 0 auto;
+}
+
 header {
 	background: #44444400;
 	position: fixed;
@@ -272,8 +277,12 @@ a.company-title:hover {
 	border-top: 1px solid darkgray;
 }
 
+.tabs__content div {
+	display: flex;
+}
+
 .tabs__content p {
-	margin: 0.8rem;
+	margin: 0.4rem;
 }
 
 .tabs__radio:checked + .tabs__label {
